
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef char u8 ;


 int hex2byte (char const*) ;
 int hex2num (char const) ;

size_t printf_decode(u8 *buf, size_t maxlen, const char *str)
{
 const char *pos = str;
 size_t len = 0;
 int val;

 while (*pos) {
  if (len + 1 >= maxlen)
   break;
  switch (*pos) {
  case '\\':
   pos++;
   switch (*pos) {
   case '\\':
    buf[len++] = '\\';
    pos++;
    break;
   case '"':
    buf[len++] = '"';
    pos++;
    break;
   case 'n':
    buf[len++] = '\n';
    pos++;
    break;
   case 'r':
    buf[len++] = '\r';
    pos++;
    break;
   case 't':
    buf[len++] = '\t';
    pos++;
    break;
   case 'e':
    buf[len++] = '\033';
    pos++;
    break;
   case 'x':
    pos++;
    val = hex2byte(pos);
    if (val < 0) {
     val = hex2num(*pos);
     if (val < 0)
      break;
     buf[len++] = val;
     pos++;
    } else {
     buf[len++] = val;
     pos += 2;
    }
    break;
   case '0':
   case '1':
   case '2':
   case '3':
   case '4':
   case '5':
   case '6':
   case '7':
    val = *pos++ - '0';
    if (*pos >= '0' && *pos <= '7')
     val = val * 8 + (*pos++ - '0');
    if (*pos >= '0' && *pos <= '7')
     val = val * 8 + (*pos++ - '0');
    buf[len++] = val;
    break;
   default:
    break;
   }
   break;
  default:
   buf[len++] = *pos++;
   break;
  }
 }
 if (maxlen > len)
  buf[len] = '\0';

 return len;
}
